replaced NavLink with react router and fix collapse toggle for mobile view

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -39,3 +39,7 @@
 .test {
     color: red;
 }
+
+.active {
+    color: #64ffda;
+}
